[gd_scene load_steps=68 format=3 uid="uid://c5l2uj10dkdvv"]

[ext_resource type="Texture2D" uid="uid://bpdtcgodfaxhk" path="res://assets/Prototype_Character/farmer-Sheet.png" id="1_hek0a"]
[ext_resource type="Script" path="res://scripts/td/TdCharacter.gd" id="1_qxb2a"]
[ext_resource type="PackedScene" uid="uid://3l1kpsyqp8xw" path="res://components/network/network_component.tscn" id="2_88njw"]
[ext_resource type="Script" path="res://components/animation/AnimationComponent.gd" id="3_f7cob"]
[ext_resource type="Shader" path="res://unit_outline.gdshader" id="3_pj5er"]
[ext_resource type="PackedScene" uid="uid://bc1ifnp3up1rc" path="res://components/health/health_component.tscn" id="3_xoh8g"]
[ext_resource type="Script" path="res://components/hitbox/HitboxComponent.gd" id="6_8pju3"]
[ext_resource type="PackedScene" uid="uid://b16xsdnqifpbm" path="res://components/movement/movement_component.tscn" id="7_8bo5c"]
[ext_resource type="Script" path="res://scripts/hns/Stats.gd" id="8_3kd1a"]
[ext_resource type="AnimationLibrary" uid="uid://cy3r14fu7srgp" path="res://animations/td_character.res" id="8_xjo07"]
[ext_resource type="PackedScene" uid="uid://nlcnfwavt8yc" path="res://components/selection/selection_component.tscn" id="11_ess74"]
[ext_resource type="PackedScene" uid="uid://cnc4fn42qv356" path="res://components/action/action_component.tscn" id="12_8menw"]
[ext_resource type="Script" path="res://scripts/rts/actions/Build.gd" id="13_61wp2"]
[ext_resource type="Texture2D" uid="uid://bg1cvfm5gto25" path="res://assets/icons/default.png" id="14_u601q"]
[ext_resource type="Script" path="res://components/build/BuildComponent.gd" id="15_cs28k"]
[ext_resource type="Script" path="res://scripts/game/GridBuildMode.gd" id="16_loc5e"]
[ext_resource type="Texture2D" uid="uid://xfwbg73xmgh0" path="res://assets/buildings/buid_preview.png" id="17_cxfbk"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kad1q"]
properties/0/path = NodePath("../HealthComponent:health")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("..:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("../AnimationComponent/AnimationTree:parameters/conditions/idle")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("../AnimationComponent/AnimationTree:parameters/conditions/moving")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("../AnimationComponent/AnimationTree:parameters/Action/blend_position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("../AnimationComponent/AnimationTree:parameters/Idle/blend_position")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("../AnimationComponent/AnimationTree:parameters/Walk/blend_position")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("../AnimationComponent/AnimationTree:parameters/Walk/0/TimeScale/scale")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("../AnimationComponent/AnimationTree:parameters/Walk/1/TimeScale/scale")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("../AnimationComponent/AnimationTree:parameters/Walk/2/TimeScale/scale")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath("../AnimationComponent/AnimationTree:parameters/Walk/3/TimeScale/scale")
properties/10/spawn = true
properties/10/replication_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fqh87"]
resource_local_to_scene = true
shader = ExtResource("3_pj5er")
shader_parameter/width = null
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq27s"]
atlas = ExtResource("1_hek0a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv5hm"]
atlas = ExtResource("1_hek0a")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf8bo"]
atlas = ExtResource("1_hek0a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0huta"]
atlas = ExtResource("1_hek0a")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh77b"]
atlas = ExtResource("1_hek0a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7xw2"]
atlas = ExtResource("1_hek0a")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_itdyx"]
atlas = ExtResource("1_hek0a")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ue1a"]
atlas = ExtResource("1_hek0a")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mjv0"]
atlas = ExtResource("1_hek0a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oooyg"]
atlas = ExtResource("1_hek0a")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_snsef"]
atlas = ExtResource("1_hek0a")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rie1t"]
atlas = ExtResource("1_hek0a")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdfwn"]
atlas = ExtResource("1_hek0a")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q3tr"]
atlas = ExtResource("1_hek0a")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndljp"]
atlas = ExtResource("1_hek0a")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k10uk"]
atlas = ExtResource("1_hek0a")
region = Rect2(128, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t88v4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq27s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv5hm")
}],
"loop": true,
"name": &"Idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf8bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0huta")
}],
"loop": true,
"name": &"Idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh77b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7xw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itdyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ue1a")
}],
"loop": true,
"name": &"Walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mjv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oooyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snsef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rie1t")
}],
"loop": true,
"name": &"Walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdfwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q3tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndljp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k10uk")
}],
"loop": true,
"name": &"Walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i26fe"]
radius = 8.0
height = 16.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_26fvl"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_w7arj"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ocjlk"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_tf7ph"]

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_lvh0l"]
blend_point_0/node = SubResource("AnimationNodeBlendTree_26fvl")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeBlendTree_w7arj")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeBlendTree_ocjlk")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeBlendTree_tf7ph")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f42ay"]
animation = &"td_character/Idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_na23c"]
animation = &"td_character/Idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_reyi5"]
animation = &"td_character/Idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m0jj3"]
animation = &"td_character/Idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_h27pi"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f42ay")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_na23c")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_reyi5")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_m0jj3")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ddpp1"]
animation = &"td_character/Walk_left"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_7ykxd"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_yglke"]
graph_offset = Vector2(-284, 54)
nodes/Animation/node = SubResource("AnimationNodeAnimation_ddpp1")
nodes/Animation/position = Vector2(-280, 100)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_7ykxd")
nodes/TimeScale/position = Vector2(-40, 100)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oohen"]
animation = &"td_character/Walk_down"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_k0wl7"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_782ny"]
graph_offset = Vector2(-193.277, 87.2593)
nodes/Animation/node = SubResource("AnimationNodeAnimation_oohen")
nodes/Animation/position = Vector2(-20, 220)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_k0wl7")
nodes/TimeScale/position = Vector2(346.5, 306.9)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s6fkc"]
animation = &"td_character/Walk_up"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_rmc15"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_bgnvd"]
graph_offset = Vector2(-225.086, 18.3395)
nodes/Animation/node = SubResource("AnimationNodeAnimation_s6fkc")
nodes/Animation/position = Vector2(-40, 120)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_rmc15")
nodes/TimeScale/position = Vector2(300, 120)
nodes/output/position = Vector2(500, 140)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yeidh"]
animation = &"td_character/Walk_right"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_c2qo7"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_34xd0"]
graph_offset = Vector2(58.4361, 189.331)
nodes/Animation/node = SubResource("AnimationNodeAnimation_yeidh")
nodes/Animation/position = Vector2(180, 320)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_c2qo7")
nodes/TimeScale/position = Vector2(462, 303.6)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_apgck"]
blend_point_0/node = SubResource("AnimationNodeBlendTree_yglke")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeBlendTree_782ny")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeBlendTree_bgnvd")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeBlendTree_34xd0")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ana4m"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7tqcl"]
advance_mode = 2
advance_condition = &"moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m1563"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_k1vhi"]
states/Action/node = SubResource("AnimationNodeBlendSpace2D_lvh0l")
states/Action/position = Vector2(491, 213)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_h27pi")
states/Idle/position = Vector2(358, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_apgck")
states/Walk/position = Vector2(625, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ana4m"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_7tqcl"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_m1563")]
graph_offset = Vector2(-56, 42)

[sub_resource type="Animation" id="Animation_0wjl1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Move_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmh0h"]
_data = {
"RESET": SubResource("Animation_0wjl1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkelu"]

[node name="TdCharacter" type="CharacterBody2D" node_paths=PackedStringArray("animation", "sprite", "stats", "movement", "health", "hitbox", "selection", "action_controller", "build") groups=["player_entity"]]
z_index = 1
collision_layer = 18
collision_mask = 44
script = ExtResource("1_qxb2a")
animation = NodePath("AnimationComponent")
sprite = NodePath("AnimatedSprite2D")
stats = NodePath("Stats")
movement = NodePath("MovementComponent")
health = NodePath("HealthComponent")
hitbox = NodePath("HitboxComponent")
selection = NodePath("SelectionComponent")
action_controller = NodePath("ActionComponent")
build = NodePath("BuildComponent")

[node name="NetworkComponent" parent="." instance=ExtResource("2_88njw")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="NetworkComponent"]
replication_config = SubResource("SceneReplicationConfig_kad1q")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("stats") instance=ExtResource("3_xoh8g")]
z_index = 1
position = Vector2(-1, -42)
stats = NodePath("../Stats")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_fqh87")
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_t88v4")
animation = &"Walk_side"
autoplay = "Idle_down"
frame = 3
frame_progress = 0.540568
offset = Vector2(0, -10)
flip_h = true

[node name="HitboxComponent" type="CollisionShape2D" parent="." node_paths=PackedStringArray("health_component", "character")]
position = Vector2(-1, -3)
shape = SubResource("CapsuleShape2D_i26fe")
script = ExtResource("6_8pju3")
health_component = NodePath("../HealthComponent")
character = NodePath("..")

[node name="AnimationComponent" type="Node2D" parent="." node_paths=PackedStringArray("sprite", "animation_tree")]
script = ExtResource("3_f7cob")
sprite = NodePath("../AnimatedSprite2D")
animation_tree = NodePath("AnimationTree")
attack_names = Array[String](["action"])

[node name="AnimationTree" type="AnimationTree" parent="AnimationComponent"]
active = false
tree_root = SubResource("AnimationNodeStateMachine_k1vhi")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/moving = false
parameters/Action/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)
parameters/Walk/0/TimeScale/scale = 1.0
parameters/Walk/1/TimeScale/scale = 1.0
parameters/Walk/2/TimeScale/scale = 1.0
parameters/Walk/3/TimeScale/scale = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationComponent"]
active = false
libraries = {
"": SubResource("AnimationLibrary_rmh0h"),
"td_character": ExtResource("8_xjo07")
}

[node name="MovementComponent" parent="." node_paths=PackedStringArray("body", "animation") instance=ExtResource("7_8bo5c")]
body = NodePath("..")
animation = NodePath("../AnimationComponent")
acceleration = 20

[node name="Stats" type="Node2D" parent="."]
script = ExtResource("8_3kd1a")
move_speed = 200

[node name="SelectionComponent" parent="." node_paths=PackedStringArray("network", "body") instance=ExtResource("11_ess74")]
network = NodePath("../NetworkComponent")
body = NodePath("..")
has_colored_outline = true

[node name="ActionComponent" parent="." node_paths=PackedStringArray("body", "actions_container") instance=ExtResource("12_8menw")]
body = NodePath("..")
actions_container = NodePath(".")

[node name="BuildTurret" type="Node2D" parent="ActionComponent" node_paths=PackedStringArray("cooldown", "time")]
script = ExtResource("13_61wp2")
building_scene = "res://scenes/game/buildings/basic_turret.tscn"
title = "Basic Turret"
icon = ExtResource("14_u601q")
cooldown = NodePath("Cooldown")
time = NodePath("Timer")
cost = 50
description = "Construct a basic turret"

[node name="Timer" type="Timer" parent="ActionComponent/BuildTurret"]

[node name="Cooldown" type="Timer" parent="ActionComponent/BuildTurret"]
wait_time = 0.5

[node name="BuildComponent" type="Node2D" parent="." node_paths=PackedStringArray("action_controller", "entity", "build_mode")]
script = ExtResource("15_cs28k")
action_controller = NodePath("../ActionComponent")
entity = NodePath("..")
build_mode = NodePath("GridBuildMode")

[node name="GridBuildMode" type="Node2D" parent="BuildComponent" node_paths=PackedStringArray("build_preview")]
show_behind_parent = true
script = ExtResource("16_loc5e")
grid_placement_cell_size = Vector2(16, 16)
build_preview = NodePath("BuildPreview")
shape = SubResource("RectangleShape2D_kkelu")

[node name="BuildPreview" type="Sprite2D" parent="BuildComponent/GridBuildMode"]
z_index = 5
scale = Vector2(0.5, 0.5)
texture = ExtResource("17_cxfbk")

[connection signal="animation_finished" from="AnimationComponent/AnimationTree" to="AnimationComponent" method="_on_animation_tree_animation_finished"]
